--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
 } */
 
 .navbar {
+  align-items: center;
   border: solid 1px #333;
   list-style-type: none;
   margin: 0;
@@ -49,12 +50,18 @@
 }
 
 li {
+  align-items: center;
   /* display: block; */
   /* margin: 3px; */
   /* padding: 5px; */
 }
+.li-myacc {
+  display: flex;
+  flex-direction: row-reverse;
+}
 
 .link {
+  align-items: center;
   text-decoration: none;
   color: white;
   padding: 5px;
@@ -63,22 +70,27 @@ li {
   float: left;
 }
 .link:hover {
+  align-items: center;
   background-color: gray;
   border: 3px solid gray;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-.link-myacc {
-  display: flex;
-  position: absolute;
+/* .link-myacc {
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  padding: 5px;
+  border: 3px solid #333;
+  background-color: #333;
+
   text-decoration: none;
   color: white;
   padding: 5px;
   border: 3px solid #333;
   background-color: #333;
   right: 0%;
-  float: right;
   padding-inline-end: 10px;
 }
 .link-myacc:hover {
@@ -86,11 +98,10 @@ li {
   border: 3px solid gray;
   padding-top: 10px;
   padding-bottom: 10px;
-}
+} */
 
 .bottombar {
   width: 100%;
-
   float: right;
   position: absolute;
   top: 96%;
@@ -98,7 +109,6 @@ li {
   border: solid 1px #333;
   margin: 0;
   padding: 0;
-
   background-color: #333;
   display: flex;
   flex-direction: row-reverse;
