--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,28 @@
   }
 } */
 
+.article__card {
+  border: solid 3px black;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 15%;
+}
+
+.loading {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: loading infinite 1s linear;
+}
+
+@keyframes loading {
+  to {
+    opacity: 0%;
+  }
+}
+
 .navbar {
   align-items: center;
   border: solid 1px #333;
@@ -76,6 +98,78 @@ li {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+.article__card {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  display: grid;
+  grid-template-columns: 25%;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "header header header header"
+    "main main sidebar sidebar"
+    "footer footer footer2 footer2 "
+    "date date date date";
+}
+.article-header {
+  grid-area: header;
+  margin: auto;
+  justify-content: center;
+  text-align: center;
+}
+.article-link {
+  border-radius: 10px;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  padding: 5px;
+  border: 3px solid #333;
+  background-color: #333;
+  float: left;
+}
+.article-author {
+  grid-area: sidebar;
+}
+.article-topic {
+  grid-area: main;
+}
+.article-date {
+  grid-area: date;
+}
+.article-comments {
+  grid-area: footer;
+}
+.article-votes {
+  grid-area: footer2;
+}
+
+.article__page {
+  border-radius: 10px;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  padding: 5px;
+  border: 3px solid #333;
+  background-color: #333;
+  float: left;
+}
+.next {
+  border: solid 3px black;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 5%;
+  margin-bottom: 15%;
+  margin-top: 0;
+  float: right;
+}
+.prev {
+  border: solid 3px black;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 5%;
+  margin-top: 0;
+  margin-bottom: 15%;
+  float: left;
+}
 
 /* .link-myacc {
   align-items: center;
@@ -101,9 +195,9 @@ li {
 } */
 
 .bottombar {
+  position: fixed;
   width: 100%;
   float: right;
-  position: absolute;
   top: 96%;
   list-style-type: none;
   border: solid 1px #333;
