--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,8 @@
 }
 
 .navbar {
+  width: 100%;
+  position: fixed;
   align-items: center;
   border: solid 1px #333;
   list-style-type: none;
@@ -143,15 +145,28 @@ li {
 }
 
 .article__page {
+  margin: 10%;
   border-radius: 10px;
-  align-items: center;
+  text-align: none;
   text-decoration: none;
   color: white;
   padding: 5px;
   border: 3px solid #333;
   background-color: #333;
-  float: left;
 }
+
+article-header-page {
+  padding-inline-start: 10px;
+}
+article-author-page {
+}
+article-body-page {
+}
+article-comments-page {
+}
+article-votes-page {
+}
+
 .next {
   border: solid 3px black;
   border-radius: 10px;
@@ -206,4 +221,9 @@ li {
   background-color: #333;
   display: flex;
   flex-direction: row-reverse;
+}
+
+h1 {
+  padding-top: 15%;
+  margin-top: 0;
 }
