update displayed comment list when comment is posted

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ p.articles {
   margin-top: 0;
 }
 
+.voter {
+  float: right;
+}
+
 .article__card {
   border: solid 3px black;
   border-radius: 10px;
