--- a/src/components/Utils/Sorter.css
+++ b/src/components/Utils/Sorter.css
@@ -1,15 +1,19 @@
-/* Dropdown Button */
+/* Style The Dropdown Button */
 .dropbtn {
-  background-color: #04aa6d;
-  color: white;
-  padding: 16px;
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: lightgray;
+  min-width: none;
+  padding: 12px 16px;
+  min-width: 160px;
   font-size: 16px;
-  border: none;
+  cursor: pointer;
 }
 
 /* The container <div> - needed to position the dropdown content */
-.sorter {
-  margin: 10%;
+.dropdown {
+  background-color: white;
+  margin: 10px;
   position: relative;
   display: inline-block;
 }
@@ -17,8 +21,8 @@
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
-  position: absolute;
-  background-color: #f1f1f1;
+  position: relative;
+  background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -34,10 +38,15 @@
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: lightgreen;
 }
 
 /* Show the dropdown menu on hover */
-.sorter:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
   display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: lightgreen;
 }
