--- a/src/App.css
+++ b/src/App.css
@@ -170,10 +170,10 @@ p.articles {
 .article-button-page {
   align-self: right;
 }
-form {
+/* form {
   margin: 20px;
   align-self: center;
-}
+} */
 
 .next {
   border: solid 3px black;
