--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -28,8 +28,8 @@
     color: black;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    background-color: cornflowerblue;
-    border: 5px solid cornflowerblue;
+    background-color: firebrick;
+    border: 5px solid firebrick;
     margin-left: 0px;
     margin-right: 0px;
   }
