--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -1,35 +1,28 @@
 @media only screen and (max-width: 600px) {
   .navbar {
     position: fixed;
-    height: 5%;
     top: 95%;
     width: 100%;
-    list-style-type: none;
     margin: 0;
     padding: 0;
     background-color: #333;
     display: flex;
-    flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
   }
 
   .navbar__link {
+    height: 44px;
+    width: 25%;
     font-size: 1.5rem;
     text-decoration: none;
     color: white;
-    padding: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
+    padding-top: 5px;
     background-color: #333;
   }
 
   .navbar__link:hover {
     color: black;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    background-color: firebrick;
-    border: 5px solid firebrick;
+    background-color: white;
     margin-left: 0px;
     margin-right: 0px;
   }
