--- a/src/components/Topics/TopicCard.module.css
+++ b/src/components/Topics/TopicCard.module.css
@@ -1,3 +1,19 @@
+.TopicCard {
+  text-align: left;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+.TopicCard__img {
+  height: 100px;
+  align-self: flex-end;
+}
+
+.TopicCard__aside {
+  padding-left: 10px;
+}
+
 .TopicCard__link {
   text-decoration: none;
   color: black;
@@ -8,26 +24,4 @@
 
 .TopicCard__dt {
   font-size: large;
-}
-
-.TopicCard__football,
-.TopicCard__coding,
-.TopicCard__cooking {
-  text-align: left;
-  padding-left: 100px;
-  background-repeat: no-repeat;
-  background-size: 75px;
-  margin-top: 50px;
-}
-
-.TopicCard__football {
-  background-image: url(https://cdn-icons-png.flaticon.com/512/33/33736.png);
-}
-
-.TopicCard__coding {
-  background-image: url(https://cdn-icons-png.flaticon.com/512/4396/4396623.png);
-}
-
-.TopicCard__cooking {
-  background-image: url(https://cdn-icons-png.flaticon.com/512/113/113339.png);
 }
