--- a/src/components/Articles/ArticleCard.module.css
+++ b/src/components/Articles/ArticleCard.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  padding-left: 0;
   margin: 8%;
   border-bottom: 8px ridge snow;
 }
