--- a/src/components/Articles/ArticlePage.module.css
+++ b/src/components/Articles/ArticlePage.module.css
@@ -8,6 +8,7 @@
 .ArticlePage__headerWrap {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .ArticlePage__header {
