fix ArticleCard styling for netlify

--- a/src/components/Articles/ArticleCard.module.css
+++ b/src/components/Articles/ArticleCard.module.css
@@ -39,7 +39,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .ArticleCard__author {
