--- a/src/components/Comments/CommentList.module.css
+++ b/src/components/Comments/CommentList.module.css
@@ -7,11 +7,15 @@
 }
 
 .CommentList__link {
-  font-size: large;
-  text-decoration: none;
-  background-color: firebrick;
+  align-self: center;
+  width: 150px;
+  margin: 5%;
   padding: 10px;
   color: white;
+  background: firebrick;
+  text-decoration: none;
   border-radius: 20px;
-  margin: 5%;
+  box-shadow: 2px 2px 2px black;
+  font-size: 25px;
+  margin-top: 10px;
 }
