--- a/src/components/Users/UserList.module.css
+++ b/src/components/Users/UserList.module.css
@@ -1,6 +1,8 @@
 .UserList {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   margin: 15%;
   margin-top: 5%;
+  justify-content: center;
 }
