--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
+  margin-top: 80px;
+}
+
+@media only screen and (max-width: 480px) {
+  .App {
+    margin-top: 10px;
+  }
 }
