--- a/src/components/Articles/ArticleForm.module.css
+++ b/src/components/Articles/ArticleForm.module.css
@@ -1,6 +1,7 @@
 .ArticleForm {
-  margin: 10%;
-  margin-top: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 500px;
 }
 
 .ArticleForm__form {
@@ -70,6 +71,8 @@
   margin-top: 5px;
   font-weight: 500;
   color: red;
+  text-align: left;
+  text-indent: 20px;
 }
 
 .ArticleForm__inputInvalid::after {
@@ -79,6 +82,8 @@
 .ArticleForm__inputValid {
   margin-top: 5px;
   color: green;
+  text-align: left;
+  text-indent: 20px;
 }
 
 .ArticleForm__inputValid::after {
@@ -103,4 +108,10 @@
   box-shadow: 2px 2px 2px black;
   font-size: 25px;
   margin-top: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .ArticleForm {
+    margin: 10%;
+  }
 }
