--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,6 +1,24 @@
+.Home {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
 .Home__h3 {
   font-size: 3em;
   padding-bottom: 10px;
   margin: 15px;
   border-bottom: groove grey 10px;
+  width: 1000px;
+  align-self: center;
+}
+
+@media only screen and (max-width: 1100px) {
+  .Home__h3 {
+    width: 500px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .Home__h3 {
+    width: auto;
+  }
 }
