--- a/src/components/Users/UserCard.module.css
+++ b/src/components/Users/UserCard.module.css
@@ -2,8 +2,10 @@
   border-radius: 10px;
   border: 2px solid firebrick;
   background-color: snow;
-  margin: 5%;
+  margin: 20px;
   padding: 10px;
+  width: 200px;
+  align-self: center;
 }
 
 .UserCard__h2 {
@@ -20,4 +22,7 @@
   color: black;
   font-size: larger;
   color: firebrick;
+}
+
+@media only screen and (max-width: 480px) {
 }
